# dice

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: cd.yml  ci.yml
tests/: test_packages.py
